--- a/client/index.html
+++ b/client/index.html
@@ -25,10 +25,9 @@
       </div>
      <h1> Just Another Text Editor</h1>
      
-      <div class="navbar-brand" 
-            ><img src="/client/src/images/logo.png" alt="logo"
-          /></div>
-    </nav>
+     <div class="navbar-brand" 
+        ><img src="/client/dist/assets/icons/icon_96x96.png" alt="J.A.T.E. Logo"
+      /></div>
 
     <main id="main">
       <div class="loading-container">
