--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
      <div class="navbar-brand" 
         ><img src="/client/dist/assets/icons/icon_96x96.png" alt="J.A.T.E. Logo"
       /></div>
+    </nav>
 
     <main id="main">
       <div class="loading-container">
